# ChangeLog for dev-python/django-portlets
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  12 Aug 2012; Justin Lecher <jlec@gentoo.org> +metadata.xml:
  Add metadata.xml
