@@ -1,1 +1,1 @@
-DIST django-portlets-20090701.tar.bz2 2991 SHA256 9daf49273fa2eb4a8b8b59c0e7f1f59d899880810f2a0bd1178789dd62d6021f
+DIST django-portlets-20090701.tar.bz2 2991 SHA256 9daf49273fa2eb4a8b8b59c0e7f1f59d899880810f2a0bd1178789dd62d6021f SHA512 ccae330fc392b7e3d8b434794befb624ad63fa2e68c3c0b8de7c2d5eec3ef984c84f90ec254afb3df5dbd709c8b2571b417a4f2978c12cf5721a253aea292c4e WHIRLPOOL d097799989bd32a7c2915701682181072128b03555a6d414c18b60e0dced82c0190cb57feca9b9e996d2069e49a330d8f8ef3d46ee3668817de857c0a2b04b52
